--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ body {
   height: 100%;
   min-width: 200px;
   padding: 2rem;
+  padding-top: 3.5rem;
   border: none;
   outline: none;
   resize: none;
@@ -24,4 +25,5 @@ body {
   min-width: 200px;
   padding: 2rem;
   border-left: 1px solid lightgray;
+  font-family: Arial, Helvetica, sans-serif;
 }
