--- a/index.css
+++ b/index.css
@@ -3,6 +3,14 @@ body {
   padding: 0;
 }
 
+a {
+  color: rgb(73, 127, 129);
+}
+
+pre {
+  white-space: pre-wrap;
+}
+
 code {
   color: rgb(209, 255, 209);
   background-color: rgb(82, 82, 82);
@@ -10,8 +18,12 @@ code {
 }
 
 blockquote {
-  background-color: rgb(250, 245, 223);
+  color: white;
+  background-color: cadetblue;
   padding: 0.2rem 1rem;
+  border-radius: 5px;
+  margin: 0;
+  display: inline-block;
 }
 
 #container {
